OO-4045: simplified assessment mode for teachers with lecture blocks